cfn5test.json
{

"Parameters": {
	"myKey": {
		"Type": "AWS::EC2::KeyPair::KeyName", 
		"Default": "homekey"}},

"Resources": {
	"myVpc": {
		"Type": "AWS::EC2::VPC",
		"Properties": {
			"CidrBlock": "10.0.0.0/16"
		}
	},
	"myInternetGateway": {
		"Type": "AWS::EC2::InternetGateway"
	},
	"myAttachGateway": {
		"Type": "AWS::EC2::VPCGatewayAttachment",
		"Properties": {
			"VpcId": {"Ref": "myVpc"},
			"InternetGatewayId": {"Ref": "myInternetGateway"}
		}
	},

	"mySubnet": {
		"Type": "AWS::EC2::Subnet",
		"Properties": {
			"CidrBlock": "10.0.0.0/24",
			"AvailabilityZone": "eu-north-1a",
			"VpcId": {"Ref" : "myVpc"},
			"MapPublicIpOnLaunch": "true"
		}
	},
	"mySecurityGroup": {
		"Type": "AWS::EC2::SecurityGroup",
		"Properties":{  	
			"GroupDescription": "Everybody has access", 
			"SecurityGroupIngress": [{"CidrIp": "0.0.0.0/0", "FromPort":"22", "ToPort": "22", "IpProtocol": "tcp"},
				{"CidrIp": "0.0.0.0/0", "FromPort":"80", "ToPort": "80", "IpProtocol": "tcp"},
				{"CidrIp": "0.0.0.0/0", "FromPort":"5001", "ToPort":"5001", "IpProtocol": "tcp"},
				{"CidrIp": "0.0.0.0/0", "FromPort":"8888", "ToPort":"8888", "IpProtocol": "tcp"}],	
			"VpcId": {"Ref": "myVpc"}
		}
	},

	"myRouteTable": {
		"Type": "AWS::EC2::RouteTable",
		"Properties": {
			"VpcId": {"Ref": "myVpc"}
		}
	},
	"myInternetRoute": {
		"Type": "AWS::EC2::Route",
		"DependsOn": "myInternetGateway",
		"Properties": {
			"DestinationCidrBlock": "0.0.0.0/0",
			"GatewayId": {"Ref": "myInternetGateway"},
			"RouteTableId": {"Ref": "myRouteTable"}
		}
	},
	"mySubnetRouteTableAssociation": {
		"Type": "AWS::EC2::SubnetRouteTableAssociation",
		"Properties": {
			"RouteTableId": {"Ref": "myRouteTable"},
			"SubnetId": {"Ref": "mySubnet"}
		}
	},	

	"myEC2": {
		"Type": "AWS::EC2::Instance",
		"Metadata": {
			"AWS::CloudFormation::Init" : {
				"configSets": {"myConfigSet": ["myConfig"]},
				"myConfig": {
				"packages": {"apt-get": {
					"git": []}
				},
				"commands": {					
					"01_command": {
						"command": "echo some_text > /home/ubuntu/tjuhej.txt"}
				}						
				,
				"files": {
					"/home/ubuntu/new_dir/jubii.txt": {
							"content": "Hello world",
							"mode": "000660",
							"owner": "root",
							"group": "root"}
				}
				}
			}
		},
		
		"Properties": {
			"ImageId": "ami-0ff338189efb7ed37",
			"InstanceType": "t3.micro",
			"SecurityGroupIds": [{"Ref": "mySecurityGroup"}],
			"SubnetId": {"Ref" : "mySubnet"},
			"KeyName": {"Ref": "myKey"},
			"UserData": {"Fn::Base64": {"Fn::Join": ["", [
				"#!/bin/bash \n",
				"apt-get update \n",
				"apt-get install -y python3-pip \n",
				"apt-get install git \n",
				"sudo apt-get install -y nginx-full \n",
				"cd /home/ubuntu/", "\n",
				"git clone https://github.com/bjarke-krysel/edge \n",
				"pip3 install flask \n",
				"cd edge \n",
				"python3 -m hello \n"
				
			]]}}
		}
	}
},
"Outputs": {
	"myOutputs": {
		"Value": {"Fn::GetAtt": ["myEC2", "PrivateIp"]},
		"Description": "This is the private IP"
		}
	}
}
